# elyria-tts

./: .gitignore  AUTH_SETUP.md  EXECUTION_STATUS.md  README.md  STATUS.txt  auth_execution_loop.sh  ci_daemon.sh  example_script.txt  example_script_emotional.txt  example_script_paralinguistic.txt  intelligent_image_generator.py  kaggle_setup.sh  kaggle_setup_locked.sh  kernel-metadata.json  monitor.sh  periodic_log_monitor.py  periodic_log_monitor.sh  pyproject.toml  qwen.md  run_image_generator.sh  setup.sh  simple_test_script.txt  test_video_functionality.py  test_video_script.txt  verify_setup.py  video_script.txt  video_synthesizer.py  voice_synthesizer.py
.debug_env/: pyvenv.cfg
benchmarks/: elyria-tts-tester-cpu-results.md  elyria-tts-tester-gpu-results.md  elyria-tts-tester-tpu-results.md  elyria-video-tester-cpu-results.md  elyria-video-tester-gpu-results.md  elyria-video-tester-tpu-results.md
notebooks/: elyria-tts-tester.ipynb
scripts/: kaggle_auth.sh
